kibana/templates/5-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk
  namespace: efk
  annotations: 
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'  
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0f0ee7c6854538393, subnet-0d213b08a51841042, subnet-0558218d6b2167c01
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "5601"    
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:216989136189:certificate/6e3207c2-a1d1-4745-81d9-f517eba3dacf"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'  
    alb.ingress.kubernetes.io/group.name: grupo-ingress     
spec:
  ingressClassName: alb  
  rules:
  - host: elk.app.wsnobrega.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
